<resources>
    <string name="app_name">ZZ</string>
    <string name="forward_by">Forwarded by you</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username (required)</string>
    <string name="password">Password (required)</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="name">Alias</string>
    <string name="profile">Profile</string>
    <string name="key_phrase">Key phrase</string>
    <string name="save">Save</string>
    <string name="saving">Saving...</string>
    <string name="registering">Registering...</string>
    <string name="retrying">Retrying %1$d/%2$d...</string>
    <string name="video_preview">Video preview</string>
    <string name="updating_avatar">Updating avatar...</string>
    <string name="avatar_update_success">Avatar updated successfully</string>
    <string name="avatar_update_failed">Failed to update avatar</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_tweet">Edit tweet</string>
    <string name="comment">Comment</string>
    <string name="reply_to">Reply to</string>
    <string name="comment_as_tweet">Post as Tweet</string>
    <string name="quote_original">Quote Original</string>
    <string name="guest_reminder">Please login or register</string>
    <string name="update_available">Update Available</string>
    <string name="update_message">A new version of the app is available. Would you like to update?</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="forwarded">forwarded</string>
    <string name="go">Go>></string>
    <string name="follow">&#160;&#160;Follow&#160;&#160;</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit">Edit</string>
    <string name="login_follow">Login to follow</string>
    <plurals name="seconds_ago">
        <item quantity="one">%1$d second ago</item>
        <item quantity="other">%1$d seconds ago</item>
    </plurals>
    <plurals name="minutes_ago">
        <item quantity="one">%1$d minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%1$d hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>
    <plurals name="weeks_ago">
        <item quantity="one">%1$d week ago</item>
        <item quantity="other">%1$d weeks ago</item>
    </plurals>
    <plurals name="months_ago">
        <item quantity="one">%1$d month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>
    <plurals name="years_ago">
        <item quantity="one">%1$d year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>
    <string name="fans">Followers</string>
    <string name="posts">Tweets</string>
    <string name="show_more">Show more....</string>
    <string name="logout">Logout</string>
    <string name="login_failed">Login failed. Please retry later.</string>
    <string name="profile_update_ok">User profile updated successfully</string>
    <string name="profile_update_failed">Update user data failed</string>
    <string name="no_more_tweets">No more tweets</string>
    <string name="fetch_failed">Couldn\'t load tweets. Please try again.</string>
    <string name="no_more_comments">No more comments</string>
    <string name="loading_more_comments">Loading more comments…</string>
    <string name="registration_ok">Registration is successful. Please wait a few minutes before login.</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="keyphrase_required">Key phrase is required</string>
    <string name="tweet_uploaded">Tweet uploaded successfully</string>
    <string name="tweet_failed">Tweet upload failed.</string>
    <string name="tweet_uploading_background">Tweet will be uploaded in background</string>
    <string name="clipboard_copy">Content copied to clipboard</string>
    <string name="share_link">Share link</string>
    <string name="screenshot">Screenshot</string>
    <string name="social_media">Social media</string>
    <string name="pinToTop">Pinned</string>
    <string name="followings">Followings</string>
    <string name="unpin">Unpin</string>
    <string name="registration_failed">Registration failed. Try again later.</string>
    <string name="username_taken">Username is taken</string>
    <string name="node_not_found">Host not found</string>
    <string name="no_chat">No chat sessions found. Click the ✉️ at top right corner on user profile page to start a chat.</string>
    <string name="start_new_chat">Start New Chat</string>
    <string name="add_chat">Add Chat</string>
    <string name="select_user_to_chat">Select User to Chat</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="login_error">Wrong username or password</string>
    <string name="comment_failed">Comment failed</string>
    <string name="comment_uploaded">Comment posted successfully</string>
    <string name="comment_delete_failed">Comment deletion failed. Please try again.</string>
    <string name="delete_failed">Tweet deletion failed. Please try again.</string>
    <string name="delete_tweet_confirmation_title">Delete tweet?</string>
    <string name="delete_tweet_confirmation_message">This tweet will be permanently deleted. This action cannot be undone.</string>
    <string name="remove_tweet_from_feed_confirmation_message">This tweet will be removed from your feed. The author\'s tweet is not deleted.</string>
    <string name="delete_comment_confirmation_title">Delete comment?</string>
    <string name="delete_comment_confirmation_message">This comment will be permanently deleted. This action cannot be undone.</string>
    <string name="confirm_pwd">Please confirm password</string>
    <string name="use_current_pswd">Keep current password</string>
    <string name="user_bookmarks">Bookmarks</string>
    <string name="user_favorites">Favorites</string>
    <string name="upload_comment">Uploading comment</string>
    <string name="your_followings">Your followings</string>
    <string name="your_fans">Your Fans</string>
    <string name="your_followings_title">Your Followings</string>
    <string name="your_bookmarks">Your Bookmarks</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="fans_at_username">Fans@%s</string>
    <string name="followings_at_username">Followings@%s</string>
    <string name="recommendation">Recommendation</string>
    <string name="update_following">Update following status</string>
    <string name="follow_operation_failed">Follow operation failed. Please try again.</string>
    <string name="follow_operation_failed_refresh_message">Please refresh your following list to update it.</string>
    <string name="post_your_reply">Post your reply</string>
    <string name="reply">Reply</string>
    <string name="delete_tweet">Tweet deleted</string>
    <string name="login_getuserid_fail">Cannot get user Id</string>
    <string name="login_getuser_fail">Cannot get User</string>
    <string name="login_success">Login success. Navigating ...</string>
    <string name="pin">Pin</string>
    <string name="host_id">Host ID</string>
    <string name="cache_information">Cache Information</string>
    <string name="tweet_cache_stats">Tweet Cache: %1$d in memory, %2$d in database</string>
    <string name="user_cache_stats">User Cache: %1$d total, %2$d valid</string>
    <string name="video_cache_stats">Video Cache: %s</string>
    <string name="video_players_stats">Video Players: %s</string>
    <string name="video_memory_stats">Video Memory: %s</string>
    <string name="image_cache_stats">Image Cache: %s</string>
    <string name="clear_all_cached_data">Clear all cached data</string>
    <string name="joined">Joined</string>
    <string name="clear_again">Clear Again</string>
    <string name="cache_cleared_success">All cache cleared successfully!</string>
    <string name="cloud_port">Cloud Port</string>
    <string name="domain_to_share">Domain to Share</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="loading">Loading</string>
    <string name="save_image">Save Image</string>
    <string name="share_image">Share Image</string>
    <string name="notification_permission_title">Enable Notifications</string>
    <string name="notification_permission_message">To receive new chat message notifications and stay updated with your conversations, please enable notifications for this app.</string>
    <string name="notification_permission_enable">Enable</string>
    <string name="notification_permission_not_now">Not Now</string>
    <string name="notification_permission_settings_title">Notification Settings</string>
    <string name="notification_permission_settings_message">Please enable notifications for this app in your device settings to receive chat message alerts.</string>
    <string name="notification_permission_open_settings">Open Settings</string>
    <string name="notification_channel_chat_messages">Chat Messages</string>
    <string name="notification_channel_chat_messages_desc">Notifications for new chat messages and conversations</string>
    <string name="notification_channel_new_tweets">New Tweets</string>
    <string name="notification_channel_new_tweets_desc">Notifications for new tweets from users you follow</string>
    <string name="notification_channel_system_updates">System Updates</string>
    <string name="notification_channel_system_updates_desc">System notifications and app updates</string>
    <string name="notification_channel_default_desc">Chat message notifications and important updates</string>
    <string name="notification_new_message_title">New message from %s</string>
    <string name="notification_new_messages_title" formatted="false">%d new messages from %s</string>
    <string name="notification_new_chat_message_simple">New chat message</string>
    <string name="notification_new_chat_messages_simple" formatted="false">%d new chat messages</string>
    <string name="notification_tap_to_view">Tap to view</string>
    <string name="notification_new_tweets_title">%d new tweets</string>
    <string name="notification_new_tweets_single_user">New tweet from %s</string>
    <string name="notification_new_tweets_multiple_users">New tweets from %s</string>
    <string name="notification_new_tweets_many_users">New tweets from %d users</string>
    <string name="download">Download</string>
    <string name="type_message">Type a message...</string>
    <string name="recommended_tweets">Recommended Tweets</string>
    <string name="discard_tweet">Discard Tweet?</string>
    <string name="discard_comment">Discard Comment?</string>
    <string name="discard_reply">Discard Reply?</string>
    <string name="unsaved_content_warning">You have unsaved content. Are you sure you want to leave?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="pin_to_top">Pin to top</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="comments">comments</string>
    <string name="forward">forward</string>
    <string name="switch_layout">Switch layout</string>
    <string name="play">Play</string>
    <string name="video_error">Video Error</string>
    <string name="video_unavailable">Video unavailable</string>
    <string name="retry">Retry</string>
</resources>